correct zoom bug on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,8 @@ form {
 
 @media screen and (max-width: 900px) {
 	.container {
-		grid-template-columns: 1fr;
+		/* grid-template-columns: 1fr; */
+		display: inline-block;
 	}
 
 	.img {
